# aitrios-qt

./: README.md  pyproject.toml
src/aitrios_qt/: app.py
src/aitrios_qt/domain/: aitrios_client.py
src/aitrios_qt/scripts/: main.py
